--- a/login.html
+++ b/login.html
@@ -1,8 +1,23 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="login.css">
-    <meta charset="UTF-8">
+    <base href="HTML"><!--修改根目录-->
+    <link rel="stylesheet" type="text/css" href="login.css" >
+    <link rel="prefetch" href="main.html">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8" http-equiv="refresh" content="60" >
+    <style media="screen AND (min-width:300px)">
+        a{
+            color:red;
+            padding:0.5em;
+        }
+    </style>
+    <style media="screen AND (max-width:300px)">
+        a{
+            color:green;
+            font-style: italic;
+        }
+    </style>
     <title>
         Title
     </title>
