--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <base href="HTML"><!--修改根目录-->
     <link rel="stylesheet" type="text/css" href="login.css">
     <link rel="prefetch" href="main.html">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../../../../新建文件夹/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8" http-equiv="refresh" content="60">
     <style media="screen AND (min-width:300px)">
         a {
@@ -34,7 +34,7 @@
     <br>
     <label><input type="button" value="Log in" accesskey="s" onclick='location.href=("main.html")'></label>
     <a href="main.html"> 直接进入 </a>
-    <script type="text/javascript" src="login.js"></script>
+    <script type="text/javascript" src="../../../../../新建文件夹/login.js"></script>
 </form>
 </body>
 </html>
