Change the Dir of href

--- a/html/main.html
+++ b/html/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="">
     <meta charset="UTF-8">
     <style>
         .class2 {
@@ -21,10 +22,10 @@
 <a href="#last">滚至结尾</a>
 <h1>Main Page</h1>
 <!--<p class="class1">test:class1</p>-->
-<script defer src="../../../../../新建文件夹/login.js"></script>
+<script defer src="js/login.js"></script>
 <p class="class2" id="test">Welcome!</p>
 <!--<q cite="www.baidu.com"><dfn title="an apple">apple</dfn></q>-->
-<a href="login.html" id="last"> <abbr title="退出账户并返回登陆界面">
+<a href="html/login.html" id="last"> <abbr title="退出账户并返回登陆界面">
     <ruby>注销
         <rp>(</rp>
         <rt>Log out</rt>
