--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <base href=""><!--修改根目录-->
-    <link rel="stylesheet" type="text/css" href="css/login.css">
-    <link rel="prefetch" href="html/main.html">
+    <!--<base href="">--><!--修改根目录-->
+    <link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="prefetch" href="main.html">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta charset="UTF-8" http-equiv="refresh" content="60">
     <style media="screen AND (min-width:300px)">
@@ -33,8 +33,8 @@
     <label><code>password:</code> <input id="password" type="password" name="password" accesskey="p"></label>
     <br>
     <label><input type="button" value="Log in" accesskey="s" onclick='location.href=("main.html")'></label>
-    <a href="html/main.html"> 直接进入 </a>
-    <script type="text/javascript" src="js/login.js"></script>
+    <a href="main.html"> 直接进入 </a>
+    <script type="text/javascript" src="login.js"></script>
 </form>
 </body>
 </html>
