--- a/temp.html
+++ b/temp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" http-equiv="refresh">
     <title>Test</title>
@@ -15,45 +16,53 @@
         }
     </style>
 </head>
-<body>
-<h1>Card Test</h1>
-<hr>
-<figure class="middle">
-    <figcaption>HTML style</figcaption>
-    <div class="card">
-        <p>1<small><sup>st</sup></small> Line.</p>
-        <p>2<small><sup>nd</sup></small> Line.</p>
-        <p>3<small><sup>rd</sup></small> Line.</p>
-        <p>4<small><sup>th</sup></small> Line.</p>
-        <p>5<small><sup>th</sup></small> Line.</p>
-    </div>
-</figure>
-<hr>
 
-<pre><script defer>
-    var div=document.createElement("div");
-    var figure=document.createElement("figure");
-    var figure_div=document.createElement("div");
-    var figcaption=document.createElement("figcaption")
-    figcaption.innerText="JS style";
-    figure.appendChild(figcaption);
-    const order=["st","nd","rd","th"];
-    var figureP=[];
-    for (let i = 1; i <= 5; i++) {
-        figureP[i-1] = document.createElement("p");
-        figureP[i-1].innerText+=i+order[i<=4?i-1:3]+" Line";
-        figure_div.appendChild(figureP[i-1]);
-    }
-    figure.appendChild(figure_div);
-    div.appendChild(figure);
-    document.body.appendChild(div);
-    figure_div.classList.add("card");
-    div.classList.add("middle");
+<body>
+    <h1>Card Test</h1>
+    <hr>
+    <figure class="middle">
+        <figcaption>HTML style</figcaption>
+        <div class="card">
+            <p>1<small><sup>st</sup></small> Line.</p>
+            <p>2<small><sup>nd</sup></small> Line.</p>
+            <p>3<small><sup>rd</sup></small> Line.</p>
+            <p>4<small><sup>th</sup></small> Line.</p>
+            <p>5<small><sup>th</sup></small> Line.</p>
+        </div>
+    </figure>
+    <hr>
+
+    <pre><script>
+        var div = document.createElement("div");
+        var figure = document.createElement("figure");
+        var figure_div = document.createElement("div");
+        var figcaption = document.createElement("figcaption");
+        figcaption.innerText = "JS style";
+        figure.appendChild(figcaption);
+        const order = ["st", "nd", "rd", "th"];
+        var figureP = [], smalls = [], sups = [],figureP2=[];
+        for (let i = 1; i <= 5; i++) {
+
+            figureP[i - 1] = document.createElement("p");
+            figureP[i - 1].innerText += i;
+            smalls[i - 1] = document.createElement("small");
+            sups[i - 1] = document.createElement("sup");
+            sups[i - 1].innerText = order[i <= 4 ? i - 1 : 3];
+            smalls[i - 1].appendChild(sups[i - 1]);
+            figureP[i - 1].appendChild(smalls[i - 1]);
+            figureP2[i - 1] = document.createElement("p");
+            figureP2[i-1].style.display="inline";
+            figureP2[i-1].innerText=" Line.";
+            figureP[i-1].appendChild(figureP2[i-1]);
+            figure_div.appendChild(figureP[i - 1]);
+        }
+
+        figure.appendChild(figure_div);
+        div.appendChild(figure);
+        document.body.appendChild(div);
+        figure_div.classList.add("card");
+        div.classList.add("middle");
     </script></pre>
 </body>
+
 </html>
-
-
-
-
-
