--- a/test.html
+++ b/test.html
@@ -63,7 +63,9 @@
             // document.writeln(e);
             println(e);
         }
-        for(i in range(10)):js
+        for(let i=1;i<=100;i++){
+            println(i);
+        }
     </script></pre>
 
 
